--- a/index.Rmd
+++ b/index.Rmd
@@ -17,7 +17,7 @@ output:
 <div class="container" style="text-align: center;">
 
   <!-- Profile Image -->
-  <img src="Index/Images/Anugil.jpg" alt="Anugil Velayudhan" class="profile-pic" style="border-radius: 20px; width: 200px;" />
+  <img src="Images/Anugil.jpg" alt="Anugil Velayudhan" class="profile-pic" style="border-radius: 20px; width: 200px;" />
 
   <!-- Tagline below image -->
  <div style="font-family: 'Times New Roman', Times, serif; font-weight: bold; font-size: 18px; margin-top: 10px;">
